bmalloc: Failure to build when the compiler specifically targets ARMv8-A / defines __ARM_ARCH_8A__ https://bugs.webkit.org/show_bug.cgi?id=174424

Reviewed by Michael Catanzaro.

* bmalloc/BPlatform.h: Also check for __ARCH_ARM_8A__ to detect ARMv8.


Canonical link: https://commits.webkit.org/191252@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219416 268f45cc-cd09-0410-ab3c-d52691b4dbfc